# snooze

./: .cloc-excludes  .dockerignore  .env  .gitattributes  .gitignore  .golangci.yml  .token  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  Taskfile.yaml  VERSION  devspace.yaml  docker-compose.yaml  go.mod  go.sum  main.go  mise.toml  node_modules  pnpm-lock.yaml  pod.yaml  pyproject.toml  tasks.py  test
.github/workflows/: release.yml  tests.yml
apiserver/: config.go  etags.go  health.go  main.go  route_log.go  route_utils.go  routes.go
apiserver/cmd/: main.go
charts/snooze/: .helmignore  Chart.yaml  Taskfile.yaml  values.yaml
charts/testing/: Chart.yaml
cmd/: main.go  root.go  version.go
cmd/process/: main.go
common/condition/: condition.go  parser.go  parser_test.go
common/daemon/: http.go  main.go
common/errors/: pipeline.go
common/field/: alert.go  parser.go  parser_test.go
common/health/: health.go
common/lang/: condition.go  condition_test.go  field.go  field_test.go
common/logging/: config.go  main.go
common/opensearch/: alertevents.go  bootstrap.go  config.go  health.go  log.go  main.go  utils.go
common/parser/: condition.go  condition_test.go  field.go  field_test.go  utils.go
common/parser0/: condition.go  condition_test.go  field.go  field_test.go  main.go  utils.go
common/rabbitmq/: config.go  main.go  notification.go  processing.go  queue.go  utils.go
common/redis/: client.go  config.go
common/ref/: parser.go  parser_test.go  reference.go  reference_test.go
common/schedule/: always.go  daily.go  daily_test.go  main.go  weekly.go  weekly_test.go
common/types/: alertevent.go  alertstate.go  group.go  log.go
common/utils/: errors.go  hash.go
components/client/: README.md  pyproject.toml
components/client/snooze_client/: login.py
components/client/snooze_client/cli/: bootstrap.py
components/googlechat/: Dockerfile  Taskfile.yaml  pyproject.toml  setup.py
components/mattermost/: pyproject.toml
components/pacemaker/: pyproject.toml
components/pacemaker/snooze_pacemaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
components/relp/: pyproject.toml
components/smtp/: pyproject.toml
components/snmptrap/: Dockerfile  Taskfile.yaml  pyproject.toml
components/snmptrap/snooze_snmptrap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
components/syslog/: Dockerfile  Taskfile.yaml  hello.py  pyproject.toml  requirements.txt
components/syslog/snooze_syslog-1.0.7/: Dockerfile  PKG-INFO  Taskfile.yaml  pyproject.toml
components/teams/: pyproject.toml
doc/: 15_Configuration.md  README.md  config.md
docs/: README.md  alerts.md  index.md  notifications.md  syslog.md
docs/general/: 08_Notifications.rst  14_Environments.rst
docs/getting_started/: 03_Login.rst
examples/: pipeline.yaml
notifiers/: README.md
packaging/: Dockerfile
packaging/files/: logging.yaml
packaging/helm/: .gitignore  .helmignore  Chart.yaml  README.md  Taskfile.yaml  values.schema.json  values.yaml
packaging/rpm/: snooze-server.spec
pkg/activecheck/: check.go  cmd.go  config.go  main.go  probe.go  syslog.go  waiter.go  webhook.go
pkg/alertmanager/: alert_closer.go  alert_handler.go  cmd.go  config.go  convert.go  handler.go  http_handler.go  main.go  metrics.go  parser.go  status.go
pkg/apiserver/: ack.go  acknowledge.go  aggs.go  alert.go  auth.go  cmd.go  config.go  etags.go  groups.go  health.go  log.go  main.go  metrics.go  notification.go  oidc.go  route_utils.go  routes.go  samples.go  snooze.go  timeline.go  utils.go
pkg/cmd/: main.go
pkg/exporter/: cmd.go  config.go  main.go  probe.go  (+3 more)
process/: config.go  db.go  main.go  otel.go  process.go
processor/: cmd.go  config.go  main.go  pipeline.go  processor.go
snooze/: __main__.py  core.py  health.py  logger.py  token.py
sources/: README.md
tasks/: doc.py  image.yaml  rpm.py
tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_core.py  test_health.py  test_token.py
ui/: .dockerignore  .env.development  .eslintrc.cjs.old  .eslintrc.yml  .token  Dockerfile  Dockerfile.dev  Taskfile.yaml  auth.yaml  bun.lockb  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json  vite.config.ts
version/: cmd.go  version.go
web/: .eslintrc.cjs  .eslintrc.yml  :w  Taskfile.yaml  babel.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
(+954 files in other folders)
