[project]
name = "snooze-client"
version = "1.0.20"
requires-python = "~=3.8"
dependencies = [
    "click",
    "click-option-group",
    "pathlib",
    "pyjwt",
    "pyyaml",
    "requests",
    "filelock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
snooze-client = "snooze_client.cli:snoozegroup"
snooze-wrap = "snooze_client.cli:snooze_wrap"
