[project]
name = "snooze_mattermostbot"
version = "0.1.0"
description = "Slack bot for SnoozeWeb"
authors = [{ name = "Florian Dematraz", email = "florian.dematraz@snoozeweb.net" }]
requires-python = "~=3.8"
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "aiohttp",
    "mattermostdriver",
    "pyparsing",
    "python-dateutil",
    "schedule",
    "mmpy_bot",
    "snooze-client",
]

[project.scripts]
snooze-mattermostbot = "snooze_mattermostbot.main:main"

[dependency-groups]
dev = []
test = ["pytest>=6.2.5,<7"]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
