[project]
name = "snooze-pacemaker"
version = "1.0.2"
requires-python = "~=3.8"
dependencies = [
  "snooze-client",
  "python-dateutil",
]

[tool.uv.sources]
snooze-client = {path = "../client"}

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
snooze-pacemaker = "snooze_pacemaker.main:alert"
