[project]
name = "snooze-snmptrap"
version = "1.0.4"
requires-python = "~=3.8"
dependencies = [
    'pathlib',
    "pyasn1==0.5.1",
    'pysnmp<5',
    'PyYAML',
    'snooze-client',
]

[tool.uv.sources]
snooze-client = {path = "../client"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
snooze-snmptrap = "snooze_snmptrap.main:main"
