[project]
name = "syslog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "pyyaml>=6.0.2",
    "snooze-client>=1.0.20",
]

[[tool.uv.index]]
name = "nexus"
url = "https://nexus.dc.japannext.co.jp/repository/pypi/simple"
default = true
