[project]
name = "snooze_teams"
version = "0.1.0"
description = "Microsoft Teams bot for SnoozeWeb"
authors = [{ name = "Florian Dematraz", email = "florian.dematraz@snoozeweb.net" }]
requires-python = "~=3.8"
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "pyparsing",
    "python-dateutil",
    "pyyaml",
    "o365",
    "waitress",
    "falcon",
    "snooze-client",
]

[project.scripts]
snooze-teams = "snooze_teams.main:main"

[dependency-groups]
dev = []
test = ["pytest>=6.2.5,<7"]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
