[project]
name = "snooze-syslog"
version = "1.0.7"
readme = "README.md"
requires-python = "~=3.8"
authors = [
    {name = "Guillaume Ludinard", email = "guillaume.ludi@gmail.com"},
    {name = "Florian Dematraz", email = "florian.dematraz@snoozeweb.net"},
]
maintainers = [
    {name = "Guillaume Ludinard", email = "guillaume.ludi@gmail.com"},
]
dependencies = [
    "pathlib",
    "pyyaml",
    "snooze-client",
    "python-dateutil",
]

[tool.uv.sources]
snooze-client = {path = "../client"}

[dependency-groups]
dev = [
    "pytest",
    "pysyslogclient",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
snooze-syslog = "snooze_syslog.main:main"
